[SELC-8298] feat: update file handling to use InputStream for uploads